# HPCWheresWallySolver

./: .gitignore
code/: CMakeLists.txt  README
code/bench/: CMakeLists.txt
code/bench/region/: CMakeLists.txt  bench_region  bench_region.cpp  run_benchmark
code/bench/thickness/: bench_thickness.cpp
code/cmake/Modules/: FindOpenCV.cmake
code/include/: whereswally.h
code/include/whereswally/: framework.h  io.h  patterns.h
code/include/whereswally/framework/: results_analysis.h  search_pattern.h
code/include/whereswally/io/: input.h  io_control.h  io_variables.h  output.h
code/source/: CMakeLists.txt  main.cpp
code/source/framework/: results_analysis.cpp  search_pattern.cpp
code/source/io/: CMakeLists.txt  input.cpp  io_control.cpp  io_variables.cpp  output.cpp
code/source/patterns/: CMakeLists.txt  bluetrousers.cpp  findfeatures.cpp  findglasses.cpp  pattern_tools.cpp  redandwhite.cpp
code/test/unit_tests/: CMakeLists.txt  CTestTestfile.cmake  general_test_functions.cpp
code/test/unit_tests/error_message/: ww_ut_error_message.cpp  ww_ut_error_message.h
code/test/unit_tests/input/: ww_ut_input.cpp  ww_ut_input.h
code/test/unit_tests/io_control/: ww_ut_io_control.cpp  ww_ut_io_control.h
code/test/unit_tests/io_variables/: ww_ut_io_variables.cpp  ww_ut_io_variables.h
code/test/unit_tests/output/: ww_ut_output.cpp  ww_ut_output.h
code/test/unit_tests/pattern_information/: CMakeLists.txt  ww_ut_pattern_information.h
code/test/unit_tests/pattern_tools/: ww_ut_pattern_tools.cpp
code/test/unit_tests/results_analysis/: ww_ut_results_analysis.cpp  ww_ut_results_analysis.h
code/test/unit_tests/search_pattern/: CMakeLists.txt  ww_ut_search_pattern.h
parallel/: CMakeLists.txt  README
parallel/bench/: CMakeLists.txt
parallel/bench/greyscale/: CMakeLists.txt  bench_greyscale.cpp  run_benchmark
parallel/bench/thickness/: CMakeLists.txt  bench_thickness  bench_thickness.cpp  run_benchmark  submit_benchmark
parallel/include/whereswally/framework/: pattern_information.h  results_analysis.h  search_pattern.h
parallel/include/whereswally/io/: error_message.h  input.h  io_control.h  io_variables.h  output.h
parallel/include/whereswally/patterns/: bluetrousers.h  findfeatures.h  findglasses.h  pattern_tools.h  redandwhite.h
parallel/source/: CMakeLists.txt  main.cpp
parallel/source/framework/: CMakeLists.txt  pattern_information.cpp  results_analysis.cpp  search_pattern.cpp
parallel/source/io/: CMakeLists.txt  error_message.cpp  input.cpp  io_control.cpp  io_variables.cpp  output.cpp
parallel/source/patterns/: .findfeatures.cpp.swo  CMakeLists.txt  bluetrousers.cpp  findfeatures.cpp  findfeatures2.cpp  findglasses.cpp  pattern_tools.cpp  redandwhite.cpp
parallel/test/sample_files/: test_config.cfg  test_config_bad.cfg
parallel/test/unit_tests/: CMakeLists.txt  CTestTestfile.cmake  general_test_functions.h
parallel/test/unit_tests/error_message/: CMakeLists.txt  CTestTestfile.cmake
parallel/test/unit_tests/input/: CMakeLists.txt  CTestTestfile.cmake
parallel/test/unit_tests/io_control/: CMakeLists.txt  CTestTestfile.cmake
parallel/test/unit_tests/io_variables/: CMakeLists.txt  CTestTestfile.cmake
parallel/test/unit_tests/output/: CMakeLists.txt  CTestTestfile.cmake
parallel/test/unit_tests/pattern_information/: CTestTestfile.cmake
parallel/test/unit_tests/results_analysis/: CMakeLists.txt  CTestTestfile.cmake
parallel/test/unit_tests/search_pattern/: CTestTestfile.cmake
serial/: .gitignore  CMakeLists.txt
serial/Testing/: TAG
serial/Testing/20130607-1938/: Build.xml  Configure.xml  Test.xml
serial/Testing/20130607-1939/: Build.xml  Configure.xml  Test.xml
serial/Testing/Temporary/: CTestCostData.txt  LastSubmit_20130607-1938.log.tmp  LastSubmit_20130607-1939.log.tmp
serial/headers/framework/: pattern_information.h  results_analysis.h  search_pattern.h
serial/headers/io/: error_message.h  input.h  io_control.h  io_variables.h  output.h
serial/headers/patterns/: find_regions.h  redandwhite.h
serial/include/whereswally/: patterns.h
serial/include/whereswally/framework/: pattern_information.h  results_analysis.h  search_pattern.h
serial/include/whereswally/io/: input.h  io_control.h  io_variables.h  output.h
serial/include/whereswally/patterns/: findglasses.h  pattern_tools.h  redandwhite.h
serial/source/: CMakeLists.txt  main.cpp
serial/source/framework/: CMakeLists.txt  pattern_information.cpp  results_analysis.cpp  search_pattern.cpp
serial/source/io/: CMakeLists.txt  error_message.cpp  input.cpp  io_control.cpp  io_variables.cpp  output.cpp
serial/source/patterns/: CMakeLists.txt  find_regions.cpp  findfeatures.cpp  findglasses.cpp  pattern_tools.cpp  redandwhite.cpp
serial/test/sample_files/: test_config.cfg
serial/test/unit_tests/: CMakeLists.txt  general_test_functions.cpp  general_test_functions.h  io_input_unit_test  io_input_unit_test.cpp  io_input_unit_test.h
serial/test/unit_tests/error_message/: .ww_ut_error_message.cpp.swp  .ww_ut_error_message.h.swp  CMakeLists.txt  ww_ut_error_message  ww_ut_error_message.cpp  ww_ut_error_message.h
serial/test/unit_tests/input/: CMakeLists.txt  ww_ut_input  ww_ut_input.cpp  ww_ut_input.h
serial/test/unit_tests/input/Testing/Temporary/: CTestCostData.txt
serial/test/unit_tests/io_control/: CMakeLists.txt  ww_ut_io_control  ww_ut_io_control.cpp  ww_ut_io_control.h
serial/test/unit_tests/io_variables/: CMakeLists.txt  ww_ut_io_variables  ww_ut_io_variables.cpp  ww_ut_io_variables.h
serial/test/unit_tests/io_variables/Testing/Temporary/: CTestCostData.txt
serial/test/unit_tests/output/: CMakeLists.txt  ww_ut_output.cpp  ww_ut_output.h
serial/test/unit_tests/pattern_information/: CMakeLists.txt  ww_ut_pattern_information  ww_ut_pattern_information.cpp  ww_ut_pattern_information.h
serial/test/unit_tests/results_analysis/: CMakeLists.txt  ww_ut_results_analysis  ww_ut_results_analysis.h
serial/test/unit_tests/search_pattern/: CMakeLists.txt  ww_ut_search_pattern  ww_ut_search_pattern.cpp  ww_ut_search_pattern.h
writeup/: Makefile  (+3 more)
(+33 files in other folders)
