cmake_minimum_required (VERSION 2.6)
project (HPCWheresWallySolver)
set (wheres_wally_VERSION_MAJOR 0)
set (wheres_wally_VERSION_MINOR 0)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}/cmake/Modules")

set(OpenCV_DIR /usr/share/opencv)
find_package(OpenCV REQUIRED)
if(OpenCV_found)
  include_directories(${OpenCV_INCLUDE_DIR})
endif(OpenCV_found)
add_definitions(-O2 -Wno-varargs)

include_directories("${PROJECT_SOURCE_DIR}/source")
include_directories("${PROJECT_SOURCE_DIR}/source/io")
add_subdirectory(source)

option (BUILD_TESTS "Build CppUnit test suites" ON)
if (BUILD_TESTS)
  enable_testing()
##  include(CTest)
  find_package(CppUnit)
  if(CPPUNIT_FOUND)
    include_directories(${CPPUNIT_INCLUDE_DIR})
    add_subdirectory(test/unit_tests)
  else(CPPUNIT_FOUND)
    message("Error: could not find cppunit")
  endif(CPPUNIT_FOUND)
endif (BUILD_TESTS)
