include_directories("${PROJECT_SOURCE_DIR}/include")
add_library(ww_ut_general general_test_functions.cpp)
add_subdirectory(error_message)
add_subdirectory(pattern_information)
add_subdirectory(search_pattern)
add_subdirectory(io_variables)
add_subdirectory(input)
add_subdirectory(output)
add_subdirectory(io_control)
add_subdirectory(results_analysis)
add_subdirectory(pattern_tools)
